<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_saved_recipes"
            android:icon="@drawable/ic_menu_saved"
            android:title="@string/saved_recipes" />
        <item
            android:id="@+id/nav_favs"
            android:icon="@drawable/ic_menu_favourites"
            android:title="@string/menu_favs" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu_category"
            android:title="@string/categories" />
    </group>

    <item android:title="Communicate">
        <menu>

            <item
                android:id="@+id/nav_admin"
                android:icon="@drawable/ic_menu_admin"
                android:title="Admin" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit"
                android:title="Logout" />
        </menu>
    </item>

</menu>
